# nslib

./: .gitignore  README.md  pyproject.toml
nslib/: __init__.py
nslib/sync/: __init__.py  api.py  models.py
nslib/sync/modules/: parser.py
pynslib/: __init__.py
pynslib/async/modules/: parser.py
pynslib/sync/: __init__.py  api.py
pynslib/sync/modules/: __init__.py  models.py  parser.py  returns.py  utils.py
tests/: dispatchlist.json  sync.py
