[tool.poetry]
name = "nslib"
version = "0.1.0"
description = "A synchronous/asynchronous library for the NS API"
license = "GPL-3.0-only"
authors = ["Aav <aav.verinhall@gmail.com>"]
repository = "https://github.com/AavHRF/nslib"
keywords = ["nationstates"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

