[tool.poetry]
name = "pynslib"
version = "0.1.3"
description = "A synchronous/asynchronous library for the NS API"
license = "GPL-3.0-only"
authors = ["Aav <aav.verinhall@gmail.com>"]
repository = "https://github.com/AavHRF/nslib"
keywords = ["nationstates"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
aiohttp = "^3.8.4"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

